Fix transfer flow
