# internal/handler/interface.go
@@ -6,8 +6,6 @@ import (
 	"context"
 	"time"
 
-	"github.com/Rhymond/go-money"
-
 	"github.com/google/uuid"
 
 	"github.com/oke11o/walletsuro/internal/model"
@@ -15,7 +13,7 @@ import (
 
 type service interface {
 	CreateWallet(ctx context.Context, userID int64, currency string) (model.Wallet, error)
-	Deposit(ctx context.Context, userID int64, uuid uuid.UUID, amount *money.Money) (model.Wallet, error)
-	Transfer(ctx context.Context, userID int64, fromWalletUUID uuid.UUID, toWalletUUID uuid.UUID, amount *money.Money) (model.Wallet, error)
+	Deposit(ctx context.Context, userID int64, uuid uuid.UUID, amount float64) (model.Wallet, error)
+	Transfer(ctx context.Context, userID int64, fromWalletUUID uuid.UUID, toWalletUUID uuid.UUID, amount float64) (model.Wallet, error)
 	Report(ctx context.Context, userID int64, t *string, date *time.Time) ([]model.ReportData, error)
 }
